Fixed #61 by bumping the close button up in the z-index.

--- a/static/css/memoji.css
+++ b/static/css/memoji.css
@@ -121,6 +121,8 @@ body {
     right: 10px;
     width: 30px;
     cursor: pointer;
+    
+    z-index: 50;
 }
 
 .close-button:hover {
